--- a/GuiRcFile/Tab.ui
+++ b/GuiRcFile/Tab.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>915</width>
+    <width>922</width>
     <height>600</height>
    </rect>
   </property>
@@ -17,9 +17,9 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>861</width>
+      <x>0</x>
+      <y>10</y>
+      <width>911</width>
       <height>531</height>
      </rect>
     </property>
@@ -28,6 +28,9 @@
       <width>1920</width>
       <height>1080</height>
      </size>
+    </property>
+    <property name="toolTip">
+     <string>123321</string>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
@@ -65,14 +68,17 @@
        <normaloff>../Resource/icon/Icon_windowIcon.ico</normaloff>../Resource/icon/Icon_windowIcon.ico</iconset>
      </attribute>
      <attribute name="title">
-      <string>first</string>
+      <string>firstssssssssssssssssssssssssssssssssssssssssssssss</string>
+     </attribute>
+     <attribute name="toolTip">
+      <string>this is first tab</string>
      </attribute>
      <widget class="QWidget" name="widget" native="true">
       <property name="geometry">
        <rect>
-        <x>39</x>
+        <x>9</x>
         <y>9</y>
-        <width>371</width>
+        <width>401</width>
         <height>501</height>
        </rect>
       </property>
