--- a/GuiRcFile/Tab.ui
+++ b/GuiRcFile/Tab.ui
@@ -85,90 +85,19 @@
       <widget class="QTableWidget" name="tableWidget">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>-10</y>
-         <width>401</width>
-         <height>501</height>
+         <x>70</x>
+         <y>130</y>
+         <width>481</width>
+         <height>192</height>
         </rect>
        </property>
-       <property name="palette">
-        <palette>
-         <active>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>0</red>
-             <green>255</green>
-             <blue>127</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </active>
-         <inactive>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>0</red>
-             <green>255</green>
-             <blue>127</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </inactive>
-         <disabled>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </disabled>
-        </palette>
-       </property>
-       <property name="whatsThis">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;this is table&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
        <property name="styleSheet">
-        <string notr="true">border-color: rgb(255, 85, 127);
-border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));</string>
+        <string notr="true">QTableWidget::item{border:3px solid rgb(255, 0, 0);background-color:rgba(255,0,0, 70);foreground-color:rgb(0,0,0);font: 9pt &quot;Minion Pro&quot;;
+}
+</string>
        </property>
        <row>
         <property name="text">
-         <string>!</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
          <string>New Row</string>
         </property>
        </row>
@@ -177,36 +106,6 @@ border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(25
          <string>New Row</string>
         </property>
        </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>2</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>3</string>
-        </property>
-       </row>
-       <column>
-        <property name="text">
-         <string>A</string>
-        </property>
-       </column>
        <column>
         <property name="text">
          <string>New Column</string>
@@ -215,76 +114,44 @@ border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(25
        <column>
         <property name="text">
          <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>B</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>C</string>
         </property>
        </column>
        <item row="0" column="0">
         <property name="text">
-         <string>A1</string>
+         <string>123</string>
+        </property>
+        <property name="foreground">
+         <brush brushstyle="Dense4Pattern">
+          <color alpha="255">
+           <red>81</red>
+           <green>199</green>
+           <blue>75</blue>
+          </color>
+         </brush>
         </property>
        </item>
-       <item row="0" column="6">
+       <item row="0" column="1">
         <property name="text">
-         <string>B1</string>
+         <string>321</string>
+        </property>
+        <property name="foreground">
+         <brush brushstyle="NoBrush">
+          <color alpha="255">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </brush>
         </property>
        </item>
-       <item row="0" column="7">
+       <item row="1" column="0">
         <property name="text">
-         <string>C1</string>
+         <string>123</string>
         </property>
        </item>
-       <item row="6" column="0">
+       <item row="1" column="1">
         <property name="text">
-         <string>A2</string>
-        </property>
-       </item>
-       <item row="6" column="6">
-        <property name="text">
-         <string>B2</string>
-        </property>
-       </item>
-       <item row="6" column="7">
-        <property name="text">
-         <string>C2</string>
-        </property>
-       </item>
-       <item row="7" column="0">
-        <property name="text">
-         <string>A3</string>
-        </property>
-       </item>
-       <item row="7" column="6">
-        <property name="text">
-         <string>B3</string>
-        </property>
-       </item>
-       <item row="7" column="7">
-        <property name="text">
-         <string>C3</string>
+         <string>321</string>
         </property>
        </item>
       </widget>
