--- a/GuiRcFile/untitled.ui
+++ b/GuiRcFile/untitled.ui
@@ -6,306 +6,85 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>915</width>
+    <width>800</width>
     <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+    background-color: white;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: #484EED;
+    max-height: 5px;
+    font: bold 14px;
+    padding: 6px;
+},
+QPushButton:pressed {
+    background-color: rgb(224, 0, 0);
+    border-style: inset;
+},
+QPushButton::menu-indicator {
+    image: url(myindicator.png);
+    subcontrol-position: right center;
+    subcontrol-origin: padding;
+    left: -2px;
+};
+	background-
+	background-image-style: solid;</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTabWidget" name="tabWidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>861</width>
-      <height>531</height>
+      <x>260</x>
+      <y>140</y>
+      <width>341</width>
+      <height>311</height>
      </rect>
     </property>
-    <property name="baseSize">
-     <size>
-      <width>1920</width>
-      <height>1080</height>
-     </size>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(44, 210, 255);</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>200</y>
+      <width>211</width>
+      <height>21</height>
+     </rect>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
-    <property name="tabPosition">
-     <enum>QTabWidget::North</enum>
+    <property name="text">
+     <string>PushButton</string>
     </property>
-    <property name="tabShape">
-     <enum>QTabWidget::Rounded</enum>
-    </property>
-    <property name="currentIndex">
-     <number>0</number>
-    </property>
-    <property name="elideMode">
-     <enum>Qt::ElideLeft</enum>
-    </property>
-    <property name="usesScrollButtons">
-     <bool>true</bool>
-    </property>
-    <property name="documentMode">
-     <bool>true</bool>
-    </property>
-    <property name="tabsClosable">
-     <bool>true</bool>
-    </property>
-    <property name="movable">
-     <bool>true</bool>
-    </property>
-    <property name="tabBarAutoHide">
-     <bool>true</bool>
-    </property>
-    <widget class="QWidget" name="tab">
-     <attribute name="icon">
-      <iconset>
-       <normaloff>../Resource/icon/Icon_windowIcon.ico</normaloff>../Resource/icon/Icon_windowIcon.ico</iconset>
-     </attribute>
-     <attribute name="title">
-      <string>first</string>
-     </attribute>
-     <widget class="QWidget" name="widget" native="true">
-      <property name="geometry">
-       <rect>
-        <x>39</x>
-        <y>9</y>
-        <width>371</width>
-        <height>501</height>
-       </rect>
-      </property>
-      <widget class="QTableWidget" name="tableWidget">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>-10</y>
-         <width>401</width>
-         <height>501</height>
-        </rect>
-       </property>
-       <property name="palette">
-        <palette>
-         <active>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>0</red>
-             <green>255</green>
-             <blue>127</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </active>
-         <inactive>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>0</red>
-             <green>255</green>
-             <blue>127</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </inactive>
-         <disabled>
-          <colorrole role="Base">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-          <colorrole role="Window">
-           <brush brushstyle="SolidPattern">
-            <color alpha="255">
-             <red>119</red>
-             <green>171</green>
-             <blue>240</blue>
-            </color>
-           </brush>
-          </colorrole>
-         </disabled>
-        </palette>
-       </property>
-       <property name="whatsThis">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;this is table&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">border-color: rgb(255, 85, 127);
-border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));</string>
-       </property>
-       <row>
-        <property name="text">
-         <string>!</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>2</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>3</string>
-        </property>
-       </row>
-       <column>
-        <property name="text">
-         <string>A</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>New Column</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>B</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>C</string>
-        </property>
-       </column>
-       <item row="0" column="0">
-        <property name="text">
-         <string>A1</string>
-        </property>
-       </item>
-       <item row="0" column="6">
-        <property name="text">
-         <string>B1</string>
-        </property>
-       </item>
-       <item row="0" column="7">
-        <property name="text">
-         <string>C1</string>
-        </property>
-       </item>
-       <item row="6" column="0">
-        <property name="text">
-         <string>A2</string>
-        </property>
-       </item>
-       <item row="6" column="6">
-        <property name="text">
-         <string>B2</string>
-        </property>
-       </item>
-       <item row="6" column="7">
-        <property name="text">
-         <string>C2</string>
-        </property>
-       </item>
-       <item row="7" column="0">
-        <property name="text">
-         <string>A3</string>
-        </property>
-       </item>
-       <item row="7" column="6">
-        <property name="text">
-         <string>B3</string>
-        </property>
-       </item>
-       <item row="7" column="7">
-        <property name="text">
-         <string>C3</string>
-        </property>
-       </item>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="widget_2" native="true">
-      <property name="geometry">
-       <rect>
-        <x>460</x>
-        <y>20</y>
-        <width>411</width>
-        <height>461</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background:yellow;
-border-left-color: rgb(255, 170, 0);</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="tab_2">
-     <attribute name="title">
-      <string>Tab 2</string>
-     </attribute>
-    </widget>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>23</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="C:/Users/HHH/Downloads/123.qrc"/>
+ </resources>
  <connections/>
 </ui>
